--- a/app/src/main/res/layout/user_home_page.xml
+++ b/app/src/main/res/layout/user_home_page.xml
@@ -3,4 +3,73 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"/>
+    android:layout_height="match_parent">
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:layout_editor_absoluteX="-16dp"
+        tools:layout_editor_absoluteY="-64dp">
+
+        <Button
+            android:id="@+id/user_home_page_Personal_zone_button"
+            android:layout_width="197dp"
+            android:layout_height="83dp"
+            android:text="Personal Zone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.345"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.341" />
+
+        <Button
+            android:id="@+id/user_home_page_Dashboard_button"
+            android:layout_width="197dp"
+            android:layout_height="83dp"
+            android:text="Dashboard"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.345"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
+            android:id="@+id/user_home_page_My_Cart_button"
+            android:layout_width="197dp"
+            android:layout_height="83dp"
+            android:text="My Cart"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.345"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.668" />
+
+        <TextView
+            android:id="@+id/user_home_page_Home_Page_textView"
+            android:layout_width="242dp"
+            android:layout_height="63dp"
+            android:layout_marginTop="80dp"
+            android:text="Home Page"
+            android:textSize="34sp"
+            app:layout_constraintBottom_toTopOf="@+id/user_home_page_Personal_zone_bttn"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.437"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
+            android:id="@+id/user_home_page_Log_Out_button"
+            android:layout_width="149dp"
+            android:layout_height="120dp"
+            android:layout_marginBottom="48dp"
+            android:text="Log Out"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.465"
+            app:layout_constraintStart_toStartOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
