--- a/app/src/main/res/layout/business_sign_in.xml
+++ b/app/src/main/res/layout/business_sign_in.xml
@@ -21,7 +21,7 @@
         android:id="@+id/business_sign_in_UserName_textEdit"
         android:layout_width="319dp"
         android:layout_height="56dp"
-        android:hint="User Name"
+        android:hint="Email"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
