--- a/app/src/main/res/navigation/main_navigator.xml
+++ b/app/src/main/res/navigation/main_navigator.xml
@@ -66,6 +66,9 @@
         <action
             android:id="@+id/action_user_home_page_to_user_saved_ads"
             app:destination="@id/user_saved_ads" />
+        <argument
+            android:name="user_account_email"
+            app:argType="string" />
     </fragment>
     <fragment
         android:id="@+id/business_home_page"
@@ -84,6 +87,9 @@
         <action
             android:id="@+id/action_business_home_page_to_business_post_new_add"
             app:destination="@id/business_post_new_add" />
+        <argument
+            android:name="business_account_email"
+            app:argType="string" />
     </fragment>
     <fragment
         android:id="@+id/business_account_info"
