--- a/app/src/main/res/layout/user_home_page.xml
+++ b/app/src/main/res/layout/user_home_page.xml
@@ -3,4 +3,66 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"/>
+    android:layout_height="match_parent">
+
+    <Button
+        android:id="@+id/user_home_page_Log_Out_button"
+        android:layout_width="147dp"
+        android:layout_height="52dp"
+        android:text="Log Out"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/user_home_page_saved_ads_button"
+        app:layout_constraintVertical_bias="0.775" />
+
+    <TextView
+        android:id="@+id/user_home_page_Home_Page_textView"
+        android:layout_width="242dp"
+        android:layout_height="63dp"
+        android:text="Home Page"
+        android:textAlignment="center"
+        android:textSize="34sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.041" />
+
+    <Button
+        android:id="@+id/user_home_page_saved_ads_button"
+        android:layout_width="197dp"
+        android:layout_height="83dp"
+        android:text="Saved Ads"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.72" />
+
+    <Button
+        android:id="@+id/user_home_page_Personal_zone_button"
+        android:layout_width="193dp"
+        android:layout_height="85dp"
+        android:text="Personal Zone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.31" />
+
+    <Button
+        android:id="@+id/user_home_page_browseActiveAds_button"
+        android:layout_width="197dp"
+        android:layout_height="83dp"
+        android:layout_marginTop="48dp"
+        android:text="Browse Active Ads"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.509"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.476" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
